// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search should render correctly while not searching 1`] = `
<div
  class="search md-grid md-grid--no-spacing"
>
  <div
    aria-expanded="false"
    aria-haspopup="true"
    class="md-layover md-full-width md-menu-container md-autocomplete-container search__autocomplete"
    id="documentation-search-menu"
  >
    <span
      aria-hidden="true"
    />
    <div
      class="md-text-field-container md-full-width md-text-field-container--input md-autocomplete"
    >
      <div
        class="md-text-field-icon-container"
      >
        <i
          class="md-icon material-icons md-text-field-icon md-text-field-icon--positioned"
        >
          search
        </i>
        <div
          class="md-text-field-divider-container md-text-field-divider-container--grow"
        >
          <input
            aria-autocomplete="list"
            autocomplete="off"
            class="md-text-field md-text-field--margin md-full-width md-text search__input"
            id="documentation-search"
            placeholder="Search"
            type="text"
            value=""
          />
          <hr
            class="md-divider md-divider--text-field md-divider--expand-from-left"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search should render correctly while searching 1`] = `
<div
  class="search md-grid md-grid--no-spacing"
>
  <div
    aria-expanded="false"
    aria-haspopup="true"
    class="md-layover md-full-width md-menu-container md-autocomplete-container search__autocomplete"
    id="documentation-search-menu"
  >
    <span
      aria-hidden="true"
    />
    <div
      class="md-text-field-container md-full-width md-text-field-container--input md-autocomplete"
    >
      <div
        class="md-text-field-icon-container"
      >
        <i
          class="md-icon material-icons md-text-field-icon md-text-field-icon--positioned"
        >
          search
        </i>
        <div
          class="md-text-field-divider-container md-text-field-divider-container--grow"
        >
          <input
            aria-autocomplete="list"
            autocomplete="off"
            class="md-text-field md-text-field--margin md-full-width md-text search__input search__input--visible search__input--active"
            id="documentation-search"
            placeholder="Search"
            type="text"
            value=""
          />
          <hr
            class="md-divider md-divider--text-field md-divider--expand-from-left"
          />
        </div>
      </div>
    </div>
  </div>
  <button
    class="md-btn md-btn--icon md-pointer--hover md-inline-block"
    id="documentation-search-hide"
    type="button"
  >
    <div
      class="md-ink-container"
    >
      <span
        aria-hidden="true"
      />
    </div>
    <i
      class="md-icon material-icons md-text--inherit"
    >
      close
    </i>
  </button>
</div>
`;
